Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-132808

Vulkan validation error on vkAcquireNextImageKHR (using validation layer bundled with 1.4.304)

XMLWordPrintable

    • Windows
    • 24d62ffd7 (dev), b96994c9e (6.9), d96c2018f (6.8)

      I have a QML sample that redraws the QML UI every frame.

      When running it with the Vulkan backend with validation layers enabled, the console is spammed with the following validation error:

      vkDebug: Validation Error: [ VUID-vkAcquireNextImageKHR-semaphore-01779 ] Object 0: handle = 0xd5b26f0000000010, type = VK_OBJECT_TYPE_SEMAPHORE; | MessageID = 0x5717e75b | vkAcquireNextImageKHR(): Semaphore must not have any pending operations.
      The Vulkan spec states: If semaphore is not VK_NULL_HANDLE, it must not have any uncompleted signal or wait operations pending (https://vulkan.lunarg.com/doc/view/1.4.304.0/windows/1.4-extensions/vkspec.html#VUID-vkAcquireNextImageKHR-semaphore-01779)
      

      I have included the mentioned sample in this issue.

        1. image-2025-01-15-14-46-40-707.png
          10 kB
          Maxime Duriez
        2. QtVulkanBug.zip
          5 kB
          Maxime Duriez
        For Gerrit Dashboard: QTBUG-132808
        # Subject Branch Project Status CR V

            lagocs Laszlo Agocs
            maximeduriez Maxime Duriez
            Votes:
            0 Vote for this issue
            Watchers:
            5 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes